1.code format 2.bug fixed in model 3.refactor in mapping container 4.rename method name in views and refactor job task module 5.Add class "AutoReconnection" to hold connnection to database, otherwise mysql will close after 8 hours without and connects by default.